RESOLVED FIXED120703
[GTK] MediaControlsGtk: fix warning in constructor due to incorrect order of attributes
https://bugs.webkit.org/show_bug.cgi?id=120703
Summary [GTK] MediaControlsGtk: fix warning in constructor due to incorrect order of ...
Alberto Garcia
Reported 2013-09-04 15:04:12 PDT
CXX Source/WebCore/rendering/libWebCore_la-RenderTextFragment.lo In file included from ../../Source/WebCore/html/shadow/MediaControlsGtk.cpp:32:0: ../../Source/WebCore/html/shadow/MediaControlsGtk.h: In constructor 'WebCore::MediaControlsGtk::MediaControlsGtk(WebCore::Document*)': ../../Source/WebCore/html/shadow/MediaControlsGtk.h:76:43: warning: 'WebCore::MediaControlsGtk::m_eventListener' will be initialized after [-Wreorder] ../../Source/WebCore/html/shadow/MediaControlsGtk.h:73:49: warning: 'WebCore::MediaControlClosedCaptionsTrackListElement* WebCore::MediaControlsGtk::m_closedCaptionsTrackList' [-Wreorder] ../../Source/WebCore/html/shadow/MediaControlsGtk.cpp:63:1: warning: when initialized here [-Wreorder] In this case it's harmless since all those elements are initialized to 0.
Attachments
Patch (1.24 KB, patch)
2013-09-04 15:06 PDT, Alberto Garcia
cgarcia: review+
Alberto Garcia
Comment 1 2013-09-04 15:06:22 PDT
Alberto Garcia
Comment 2 2013-09-05 00:21:05 PDT
Note You need to log in before you can comment on or make changes to this bug.