[GTK] MediaControlsGtk: fix warning in constructor due to incorrect order of attributes https://bugs.webkit.org/show_bug.cgi?id=120703

Reviewed by Carlos Garcia Campos.

Fix member initialization so it matches their declaration [-Wreorder].

* html/shadow/MediaControlsGtk.cpp:
(WebCore::MediaControlsGtk::MediaControlsGtk):

Canonical link: https://commits.webkit.org/138714@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155102 268f45cc-cd09-0410-ab3c-d52691b4dbfc